--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce-frontend-client",
-  "homepage": "https://DOM-inators.github.io/ecommerce-frontend-client",
+  "homepage": "https://github.com/DOM-inators/ecommerce-frontend-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
