--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.1",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
@@ -20,6 +22,7 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
+    "react-stripe-checkout": "^2.6.3",
     "resolve": "1.6.0",
     "url-loader": "0.6.2",
     "uuid": "^7.0.3"
