--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce-frontend-client",
-  "homepage": "https://greggoldman11.github.io/ecommerce-frontend-client/",
+  "homepage": "https://www.goldmancodes.com/ecommerce-frontend-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
